[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lru-dict"
version = "1.4.0"
description = "An Dict like LRU container."
authors = [
    {name = "Amit Dev"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["lru", "dict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.urls]
Homepage = "https://github.com/amitdev/lru-dict"
[project.optional-dependencies]
test = [
    "pytest",
]

[tool.cibuildwheel]
test-extras = ["test"]
test-sources = ["test"]
test-command = "python -m pytest -v"
xbuild-tools = []
